2010-01-30  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	change again the redefinition of open(). Needed
	for the gif loader. But the compilation with vc++
	is certainly broken. Will be fixed later with a specific
	case for vc++.

2010-01-30  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_fcntl.c:
	* src/lib/evil_fcntl.h:
	fix fcntl() with F_SETFL command

2010-01-29  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_fcntl.c:
	* src/lib/evil_fcntl.h:
	* src/lib/evil_unistd.c:
	make pipe() blocking by default and allow fcntl()
	to set a socket to be non-blocking

	* src/lib/evil_stdlib.c:
	fix warning

2010-01-19  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/dlfcn/dlfcn.c:
	Fix dladdr() on Windows CE: use the calling process
	address to get the path.

2009-12-19  Vincent Torri  <doursse at users dot sf dot net>

	* Makefile.am:
	remove m4 libtool installed files during the
	maintainer-clean rule

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	add the remove() function

2009-12-11  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	improve configure output

2009-12-07  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_libgen.c:
	* src/lib/evil_libgen.h:
	* src/lib/Makefile.am:
	* win32/vs8/libevil.vcproj:
	* win32/vs9/libevil.vcproj:
	add basename() function.

	* src/lib/Evil.h:
	add basename() function and comment useless wrappers (for now).

	* src/lib/dlfcn/dlfcn.h:
	remove useless include.

	* src/lib/evil_util.c:
	formatting.

2009-12-06  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_string.c:
	add strrstr() function.

	* src/bin/evil_suite.c:
	* src/lib/evil_fnmatch.c:
	* src/lib/evil_fnmatch_list_of_states.c:
	include config.h

2009-10-08  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_main.c:
	Shutdown socket system in evil_shutdown().
	Update init/shutdown scheme.
